# bot

./: .claudignore  .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DECISIONS.md  Dockerfile  LICENSE  PROJECT_STATE.md  PROJECT_STRUCTURE.md  README.md  STATUS.md  TASK_7_SUMMARY.md  TASK_7_VALIDATION_REPORT.txt  TODO.md  a.py  ai_analyzer.py  ai_client.py  ai_kolejka_20260315_1859.json  backtest_db.py  brain_graph.html  cichy_bot.bat  czysc_baze.py  dashboard.py  env_wzor.txt  fix_patch.py  footstats.py  footstats_BACKUP.py  footstats_logging.py  gitignore  patch_footstats_ai.py  pyproject.toml  requirements.txt  run_daily.bat  run_daily_agent.bat  run_draft_agent.bat  run_evening_agent.bat  run_final_agent.bat  run_weekly_report.bat  scraper_enriched.py  (+8 more)
.cache/: af_budget.json  af_cache.json
.claude/: settings.local.json
.streamlit/: config.toml
.vexp/: manifest.json
data/: model_calibration.json
docs/: COUPON_SETTLEMENT.md  OBSERVABILITY.md  SecondBrain_Log_2026-04-17.md  scheduler_setup.md  session_2026-05-07.md
fbotsrcfootstatsgui/: index.html  package.json
fix/: fix_handler_j.py  fix_series_bool.py  gitignore_nowy.txt
legacy/: golazo_bot.py
scratch/: analyze_fs.py  check_db.py  flashscore_d4.html  flashscore_mobi.html  test_flashscore.py  test_fs_interactive.py  test_fs_search.py
scripts/: add_logging.py  backup_db.py  backup_db.sh  fix_logging_fstrings.py  run_agent.bat  run_backtest.py  run_daily.bat  run_dashboard.bat  run_results.bat  settle_coupons.py
tests/: conftest.py  test_ai_pipeline_integration.py  test_api_routes.py  test_auth.py  test_backtest.py  test_backtest_confidence_filter.py  test_backup_db.py  test_cache.py  test_calibration.py  test_circuit_breaker.py  test_coupon_tracker.py  test_daily_agent_faza.py  test_decision_score.py  test_ensemble.py  test_evening_agent.py  test_footstats.py  test_helpers.py  (+17 more)
(+100 files in other folders)
